// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`networkDepositFinalised updates swap request for boosted deposit 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "chunkIntervalBlocks": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "depositAmount": null,
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2024-08-06T00:00:06.000Z,
  "depositFinalisedBlockIndex": "10-7",
  "depositTransactionRef": "0821895c9b0ae1078a9cd1b78a3c35fdf615524691901d323676811343b95f2f",
  "destAddress": "0x41ad2bc63a2059f9b623533d87fe99887d794847",
  "destAsset": "Eth",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "id": Any<BigInt>,
  "nativeId": 57034n,
  "numberOfChunks": null,
  "originType": "DEPOSIT_CHANNEL",
  "prewitnessedDepositId": 5265n,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Btc",
  "swapDepositChannelId": Any<BigInt>,
  "swapInputAmount": "100000000",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-06T00:00:00.000Z,
  "swapRequestedBlockIndex": null,
}
`;

exports[`networkDepositFinalised updates swap request for regular deposit 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "chunkIntervalBlocks": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "depositAmount": "1000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2024-08-06T00:00:06.000Z,
  "depositFinalisedBlockIndex": "10-7",
  "depositTransactionRef": "0821895c9b0ae1078a9cd1b78a3c35fdf615524691901d323676811343b95f2f",
  "destAddress": "0x41ad2bc63a2059f9b623533d87fe99887d794847",
  "destAsset": "Eth",
  "effectiveBoostFeeBps": null,
  "egressId": null,
  "fees": [
    {
      "amount": "4668",
      "asset": "Btc",
      "id": Any<BigInt>,
      "swapId": null,
      "swapRequestId": Any<BigInt>,
      "type": "INGRESS",
    },
  ],
  "id": Any<BigInt>,
  "nativeId": 57034n,
  "numberOfChunks": null,
  "originType": "DEPOSIT_CHANNEL",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "REGULAR",
  "srcAddress": null,
  "srcAsset": "Btc",
  "swapDepositChannelId": Any<BigInt>,
  "swapInputAmount": "100000000",
  "swapOutputAmount": null,
  "swapRequestedAt": 2024-08-06T00:00:00.000Z,
  "swapRequestedBlockIndex": null,
}
`;
